--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> {{ title | default("Maroof Lone | Code, Context & Curiosity") }} </title>
-  <meta name="description" content="{{ description | default('Computer Science Engineer, Web Developer and Blogger from Kashmir. Specializing in OSINT, cybersecurity, and digital research solutions.') }}">  <link rel="canonical" href="https://www.marooflone.com{{ page.url }}">
+  <meta name="description" content="{{ description | default('Computer Science Engineer, Web Developer and Blogger from Kashmir. Specializing in OSINT, cybersecurity, and digital research solutions.') }}">
+  <link rel="canonical" href="https://www.marooflone.com{{ page.url }}">
   <link rel="stylesheet" href="/style.css?v=fix4">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
