FIxed Meta Tags

--- a/src/contact-me.njk
+++ b/src/contact-me.njk
@@ -1,6 +1,7 @@
 ---
 title: Contact Me
 layout: base.njk
+description: "Get in touch with Maroof Lone. Email me for collaborations, freelance web projects, or just to say hi."
 ---
 
 <style>
