--- a/src/hi.njk
+++ b/src/hi.njk
@@ -1,6 +1,7 @@
 ---
 permalink: /hi/
 layout: false
+description: "QQuick links to Maroof Lone's work. Find my coding projects, helpful developer resources, community links, and ways to connect with me directly."
 ---
 <!DOCTYPE html>
 <html>
