--- a/src/index.njk
+++ b/src/index.njk
@@ -6,7 +6,7 @@ layout: 'base.njk'
     <div class="container main-content">
       <div class="profile-section">
         <div class="profile-photo-wrapper">
-            <img src="assets/images/main-images/maroof-hero-image-new.png" alt="Maroof Lone" class="profile-photo">
+            <img src="assets/images/main-images/marooflone-hero-image.webp" alt="Maroof Lone" class="profile-photo" fetchpriority="high">
         </div>
       </div>
 
@@ -60,7 +60,7 @@ layout: 'base.njk'
         
         <div class="timeline-item" onclick="toggleAccordion(this)">
           <div class="logo-wrapper">
-            <img src="assets/images/main-images/coding.png" alt="Freelance" />
+            <img src="assets/images/main-images/coding.png" alt="Freelance" loading="lazy" width="70" height="70" />
           </div>
           
           <div class="timeline-header-wrapper">
@@ -82,7 +82,7 @@ layout: 'base.njk'
 
         <div class="timeline-item" onclick="toggleAccordion(this)">
           <div class="logo-wrapper">
-            <img src="assets/images/main-images/boomlive-logo.jpg" alt="BOOMLive" />
+            <img src="assets/images/main-images/boomlive-logo.jpg" alt="BOOMLive" loading="lazy" width="70" height="70" />
           </div>
           
           <div class="timeline-header-wrapper">
@@ -109,7 +109,7 @@ layout: 'base.njk'
         
         <div class="timeline-item" onclick="toggleAccordion(this)">
           <div class="logo-wrapper">
-            <img src="assets/images/main-images/bfgi_logo.jpg" alt="College" />
+            <img src="assets/images/main-images/bfgi_logo.jpg" alt="College" loading="lazy" width="70" height="70" />
           </div>
 
           <div class="timeline-header-wrapper">
@@ -143,7 +143,7 @@ layout: 'base.njk'
         
         <div class="project-card">
           <div class="project-image">
-            <img src="assets/projects/heal-your-heart-og-image.png" alt="Project Screenshot">
+            <img src="assets/projects/heal-your-heart-og-image.webp" alt="Project Screenshot" loading="lazy" width="600" height="340" >
           </div>
           <div class="project-content">
             <h3 class="project-title">Heal Your Heart</h3>
