--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,8 +9,7 @@
   <meta name="description" content="{{ description | default('Computer Science Engineer, Web Developer and Blogger from Kashmir. Specializing in OSINT, cybersecurity, and digital research solutions.') }}">
   <link rel="canonical" href="https://www.marooflone.com{{ page.url }}">
   <link rel="stylesheet" href="/style.css?v=fix4">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" media="print" onload="this.media='all'">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@400;500;700&family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" media="print" onload="this.media='all'">
   <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"></noscript>
   
   {% if page.url and '/blog/' in page.url %}
