--- a/src/index.njk
+++ b/src/index.njk
@@ -60,7 +60,7 @@ layout: 'base.njk'
         
         <div class="timeline-item" onclick="toggleAccordion(this)">
           <div class="logo-wrapper">
-            <img src="assets/images/main-images/coding.png" alt="Freelance" loading="lazy" width="70" height="70" />
+            <img src="assets/images/main-images/coding.webp" alt="Freelance" loading="lazy" width="70" height="70" />
           </div>
           
           <div class="timeline-header-wrapper">
@@ -82,7 +82,7 @@ layout: 'base.njk'
 
         <div class="timeline-item" onclick="toggleAccordion(this)">
           <div class="logo-wrapper">
-            <img src="assets/images/main-images/boomlive-logo.jpg" alt="BOOMLive" loading="lazy" width="70" height="70" />
+            <img src="assets/images/main-images/boomlive-logo.webp" alt="BOOMLive" loading="lazy" width="70" height="70" />
           </div>
           
           <div class="timeline-header-wrapper">
@@ -109,7 +109,7 @@ layout: 'base.njk'
         
         <div class="timeline-item" onclick="toggleAccordion(this)">
           <div class="logo-wrapper">
-            <img src="assets/images/main-images/bfgi_logo.jpg" alt="College" loading="lazy" width="70" height="70" />
+            <img src="assets/images/main-images/bfgi_logo.webp" alt="College" loading="lazy" width="70" height="70" />
           </div>
 
           <div class="timeline-header-wrapper">
