--- a/src/links.njk
+++ b/src/links.njk
@@ -8,7 +8,7 @@ layout: 'base.njk'
   <div class="links-profile">
     
     <div class="square-avatar-container">
-      <img src="/assets/images/main-images/maroof-hero-image-new.png" alt="Maroof Lone" class="square-avatar">
+      <img src="/assets/images/main-images/marooflone-hero-image.webp" alt="Maroof Lone" class="square-avatar">
       
       <div class="avatar-overlay">
         <span>One Man Army</span>
