--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -15,6 +15,7 @@
       <a href="/" class="nav-link">Home</a>
       <a href="/#skills" class="nav-link">Skills</a>
       <a href="/#work" class="nav-link">Work</a>
+      <a href="/#testimonials" class="nav-link">Testimonials</a>
       <a href="/#projects" class="nav-link">Projects</a>
       <a href="/blog" class="nav-link">Blog</a>
 
